--- a/app/src/main/res/layout/activity_vaelg_opgave.xml
+++ b/app/src/main/res/layout/activity_vaelg_opgave.xml
@@ -8,10 +8,18 @@
     tools:context=".VaelgOpgaveActivity">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="587dp"
+        android:layout_width="589dp"
         android:layout_height="308dp"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.538">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clBrugsscenairer"
@@ -25,7 +33,7 @@
             <TextView
                 android:id="@+id/tvBrugssenairerTitel"
                 android:layout_width="0dp"
-                android:layout_height="27dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -40,16 +48,16 @@
 
             <TextView
                 android:id="@+id/tvBrugsscenairerText"
-                android:layout_width="148dp"
+                android:layout_width="192p"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/VaelgOpgave_BrugsText"
                 android:textAlignment="textStart"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.8"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvBrugssenairerTitel" />
         </android.support.constraint.ConstraintLayout>
@@ -86,7 +94,7 @@
 
             <TextView
                 android:id="@+id/tvforbindTTabletText"
-                android:layout_width="148dp"
+                android:layout_width="192dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
@@ -94,6 +102,7 @@
                 android:text="@string/VaelgOpgave_forbindTabletText"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.25"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvForbindTTabletTitel" />
         </android.support.constraint.ConstraintLayout>
