--- a/app/src/main/res/layout/activity_vaelg_rolle.xml
+++ b/app/src/main/res/layout/activity_vaelg_rolle.xml
@@ -24,10 +24,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="308dp"
+        android:layout_width="592dp"
+        android:layout_height="309dp"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="3dp">
+        tools:layout_editor_absoluteY="2dp">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clInstruktor"
