--- a/app/src/main/res/layout/activity_vaelg_opgave.xml
+++ b/app/src/main/res/layout/activity_vaelg_opgave.xml
@@ -48,7 +48,7 @@
 
             <TextView
                 android:id="@+id/tvBrugsscenairerText"
-                android:layout_width="192p"
+                android:layout_width="192dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
