--- a/app/src/main/res/layout/scenarie_liste_layout.xml
+++ b/app/src/main/res/layout/scenarie_liste_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/listeElement"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/scenarie_navn"
@@ -12,9 +12,9 @@
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@color/colorLightGray"
         android:text="@string/scenarie_dummy_navn"
         android:textSize="26sp"
-        android:background="@color/colorLightGray"
         app:layout_constraintBottom_toBottomOf="@+id/knap_rediger_scenarie"
         app:layout_constraintEnd_toStartOf="@+id/knap_rediger_scenarie"
         app:layout_constraintStart_toStartOf="parent"
